--- a/requirements-Copy.txt
+++ b/requirements-Copy.txt
@@ -1,6 +1,6 @@
 Flask==2.3.2
 Werkzeug==2.3.6
-PyMuPDF>=1.19.0
+PyMuPDF==1.23.5
 sentence-transformers==2.2.2
 transformers==4.31.0
 huggingface-hub==0.15.1
